RESOLVED FIXED49136
[GTK] Wrapped DOM bindings GObjects do not disconnect event listeners when they die
https://bugs.webkit.org/show_bug.cgi?id=49136
Summary [GTK] Wrapped DOM bindings GObjects do not disconnect event listeners when th...
Martin Robinson
Reported 2010-11-06 19:10:18 PDT
When wrapped DOM bindings GObjects die, they should disconnect their event listeners. If they do not, after they are finalized, segmentation faults could appear when they attempt to fire signals for DOM events.
Attachments
Patch (7.94 KB, patch)
2010-11-06 19:56 PDT, Martin Robinson
xan.lopez: review+
Martin Robinson
Comment 1 2010-11-06 19:56:14 PDT
Xan Lopez
Comment 2 2010-11-06 20:07:56 PDT
Comment on attachment 73182 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=73182&action=review Looks good to me. > WebCore/bindings/gobject/GObjectEventListener.cpp:46 > + m_coreNode->addEventListener(domEventName, this, false); There's no way you can have both right? There should be an else. > WebCore/bindings/gobject/GObjectEventListener.h:51 > + This should probably go in the impl. file? > WebCore/bindings/gobject/GObjectEventListener.h:71 > + // we only use them when the GObject and thus the WebCore object is alive. when the GObject... is created?
Martin Robinson
Comment 3 2010-11-08 08:43:03 PST
Note You need to log in before you can comment on or make changes to this bug.